--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
+    <head>
+        <a href="style.css"></a>
+    </head>
+    <body>
     <p>Hello</p>
     <h1>hello</h1>
     <h2>hello</h2>
     <p>hello there</p>
+    </body>
 </html>
